# llm-mushroom-chatbot

./: part_1a_gemini.py  part_2_mushroom_chatbot.py  pyproject.toml  report.md  winnys_code.py
